# learnerhq

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
apps/ai/: exceptions.py  services.py
apps/ai/migrations/: 0001_enable_pgvector.py
apps/core/: authentication.py  exceptions.py  health.py  models.py  serializers.py  services.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_password_reset_token.py  0003_user_preferences.py
apps/core/tests/: test_auth.py  test_email.py  test_email_notifications.py  test_health.py  test_models.py  test_password_reset.py  test_profile.py
apps/learning/: exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/learning/migrations/: 0001_learning_models.py  0002_subject_embedding.py  0003_add_generation_started_at.py  0004_topic_progress_is_bonus.py  0005_progression_and_interest.py  0006_quiz_resource_links_viewed.py  0007_notification_fields.py  0008_selection_pending_since.py  0009_alter_subject_embedding.py
apps/learning/tests/: test_canonicalization.py  test_content_generation.py  test_leaderboard.py  test_models.py  test_notifications.py  test_progression.py  test_quizzes.py  test_roadmap.py  test_views.py  (+2 more)
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
config/utils/: email_notifications.py  email_service.py  tasks.py
docs/: PROD_READINESS.md  api-reference.md  future-features.md
(+4 files in other folders)
