[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "learnerhq-backend"
version = "0.1.0"
description = "Backend API for LearnerHQ - gamified AI-powered learning platform"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "celery[redis]>=5.4",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.6",
    "psycopg[binary]>=3.2",
    "python-decouple>=3.8",
    "django-cors-headers>=4.3",
    "whitenoise>=6.7",
    "drf-spectacular>=0.30.0",
    "pgvector>=0.5.0",
    "django-anymail[sendinblue]>=10",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["apps"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
